<resources>
    <string name="app_name">CallManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_call_options">CallOptions</string>
    <string name="btn_add_new_numbers_from_contact">Update changes</string>
    <string name="btn_new_given_number">Confirm</string>
    <string name="textview_number">Number:</string>
    <string name="textview_name">Name:</string>
    <string name="btn_silent_options">Sound Management</string>
    <string name="btn_call_options">Call Management</string>
    <string name="rb_blacklist_text">Black List</string>
    <string name="rb_whitelist_text">White List</string>
    <string name="btn_add_new_number">Add number</string>
    <string name="btn_available_numbers_update">Confirm changes</string>
    <string name="switchbtn_turn_off_on">Turn Off/On</string>
    <string name="reject_check_btn_name">Check Rejected Calls</string>

    <string name="title_activity_time_picker">TimePickerActivity</string>
    <string name="start_no_values_yet">Start Time: No value set</string>
    <string name="end_no_values_yet">End Time: No value set</string>
    <string name="PositiveButton">OK</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="radioButtonVibrate">Vibrate</string>
    <string name="radioButtonSilent">Silent</string>
    <string name="btnApply">Apply</string>
    <string name="btnCancelService">Cancel Service</string>
    <string name="choose_valie">Choose a value!</string>
    <string name="OK">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="soundMgmtText">In this menu, you can set your smart phone to be in silent or vibrate mode in a specified interval.</string>
    <string name="callMgmtText">In this menu, you can specify contacts and put them on black or white lists, so they won\'t disturb you.</string>
    
    <string name="startTimeNoValue">Start Time: No value set</string>
    <string name="endTimeNoValue">End Time: No value set</string>
    <string name="optionSet">Option is set</string>
    <string name="notificationTitle">Service is running</string>
    <string name="notificationTicker">Service started</string>
    <string name="cannotProceed">Cannot Proceed</string>
    <string name="chooseVibrateOrSilent">Please choose vibrate or silent mode!</string>
    <string name="selectStartAndEndTime">Please select both the Start and the End time!</string>
    <string name="serviceCancelled">Service is cancelled</string>
    <string name="underConst">Under construction...</string>
    <string name="notingToDo">Nothing to do, service is not running</string>
    <string name="vibrateSet">Vibrate mode is set</string>
    <string name="silentModeSet">Silent mode is set</string>
    <string name="normalModeSet">Normal mode is set</string>
    
    
    
    
</resources>
