<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/primary_dark_material_light">

    <Button
        style="@style/myButton"
        android:id="@+id/btSilent_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_silent_options"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/myTextView"
        android:id="@+id/textViewSoundMgmt"
        android:layout_below="@id/btSilent_options"
        android:text="@string/soundMgmtText"
        android:paddingBottom="30dp"
        />

    <Button
        style="@style/myButton"
        android:id="@+id/btCall_options"
        android:text="@string/btn_call_options"
        android:layout_below="@+id/textViewSoundMgmt"
         />

    <TextView
        style="@style/myTextView"
        android:id="@+id/textViewCallMgnt"
        android:layout_below="@id/btCall_options"
        android:text="@string/callMgmtText"
        android:paddingBottom="50dp"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_below="@id/textViewCallMgnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/callmgmt"

        />

</RelativeLayout>
