<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rabai_timko.nik.uniobuda.hu.sound_datetime.TimePickerActivity"
    android:background="@color/primary_dark_material_light"
    >

    <TextView
        style="@style/myTextView"
        android:text="@string/choose_valie"
        android:layout_centerHorizontal="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/pickertime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TimePicker>

            <TextView
                style="@style/myTextView"
                android:id="@+id/info"
                />

            <Button
                style="@style/myButton"
                android:id="@+id/btn_ok"
                android:text="@string/OK"
                android:onClick="proceed">
            </Button>

            <Button
                style="@style/myButton"
                android:id="@+id/btn_cancel"
                android:text="@string/cancel"
                android:onClick="cancelChoose">
            </Button>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>